--- a/paper/code/strong_norm.tex
+++ b/paper/code/strong_norm.tex
@@ -996,6 +996,8 @@
 	\AgdaDatatype{SN*}\AgdaSpace{}%
 	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
 	\AgdaBound{t}\<%
+\end{code}
+%</lemma-sub>
 	\\
 	\>[0]\AgdaFunction{lemma-sub}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
@@ -1078,6 +1080,8 @@
 	\AgdaSymbol{(}\AgdaFunction{rename}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{S\AgdaUnderscore{}}}\AgdaSpace{}%
 	\AgdaBound{t}\AgdaSymbol{))}\<%
+\end{code}
+%</lemma-S>
 	\\
 	\>[0]\AgdaFunction{lemma-S}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
@@ -1116,8 +1120,6 @@
 	\>[4]\AgdaSymbol{(}\AgdaFunction{SN*-rename}\AgdaSpace{}%
 	\AgdaBound{ρ}\AgdaSpace{}%
 	\AgdaBound{SNt}\AgdaSymbol{)}\<%
-\end{code}
-%</lemma-S>
 
 %<*lemma-curry>
 \begin{code}%
