Fix variables names

--- a/paper/code/strong_norm_base.tex
+++ b/paper/code/strong_norm_base.tex
@@ -2105,10 +2105,7 @@
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{transport}\AgdaSpace{}%
 \AgdaDatatype{SN}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{sub-id}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{∅}\AgdaSymbol{\})}\AgdaSpace{}%
+\AgdaFunction{sub-id}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{SN*-SN}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{adequacy}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -2160,13 +2157,13 @@
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaBound{Δ₁}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}\{}\AgdaBound{N}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}\{}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}\{}\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}\{}\AgdaBound{u}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Δ₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -2184,7 +2181,7 @@
 \>[4][@{}l@{\AgdaIndent{0}}]%
 \>[8]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
 \AgdaFunction{ids}\AgdaSpace{}%
@@ -2194,10 +2191,10 @@
 \AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{ids}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
@@ -2207,7 +2204,7 @@
 \AgdaFunction{exts}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\<%
+\AgdaBound{t}\AgdaSymbol{)}\<%
 \end{code}
 %</subst-split>
 
@@ -2240,13 +2237,13 @@
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}\{}\AgdaBound{N}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}\{}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{\}\{}\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}\{}\AgdaBound{u}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -2262,21 +2259,21 @@
 \AgdaFunction{exts}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaFunction{[}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
 \AgdaFunction{]}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
 \AgdaSymbol{(}
-\AgdaBound{N}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaFunction{[}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}
+\AgdaBound{u}\AgdaSpace{}
 \AgdaFunction{]}\AgdaSymbol{)}\<%
 \end{code}
 %</subst-commute>
