Fix some issues

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,6 +1,6 @@
 Los sistemas de tipos desempeñan un papel esencial en la garantía del comportamiento adecuado de los programas.
 Sin embargo, estos imponen cierta rigidez a la hora de escribir dichos programas, ya que se deben adherir estrictamente a las reglas de tipado establecidas.
-Existen una serie de ``sistemas módulo isomorfismos'' \cite{system-i,lambda-plus,sip} que proponen flexibilizar esta restricción considerando aquellos tipos que sean isomorfos como idénticos.
+Existen una serie de ``sistemas módulo isomorfismos'' \cite{system-i,extensional-proofs, dist-lambda,lambda-plus,sip,sip-paper} que proponen flexibilizar esta restricción considerando aquellos tipos que sean isomorfos como idénticos.
 En simples palabras, dos tipos se consideran isomorfos cuando es posible convertir uno en el otro, y viceversa, sin perder información en el proceso.
 Es decir, si dos tipos $A$ y $B$ son isomorfos, es posible usar un término de tipo $A$ en cualquier lugar que se espere un término de tipo $B$ aplicando la conversión correspondiente.
 Trabajar con tipos isomorfos provee mayor flexibilidad en la construcción de programas y permite combinarlos de formas que normalmente no serían posibles.
