--- a/paper/code/progress.tex
+++ b/paper/code/progress.tex
@@ -1031,7 +1031,7 @@
 \end{code}
 %</value>
 
-%<*normal>
+%<*neutral>
 \begin{code}
 	\>[0]\AgdaKeyword{data}\AgdaSpace{}%
 	\AgdaDatatype{⇓}\AgdaSpace{}%
@@ -1199,9 +1199,10 @@
 	\AgdaBound{iso}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
 	\AgdaBound{t}\AgdaSymbol{)}\<%
-	\\
-	%
-	\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</neutral>
+%<*normal>
+\begin{code}
 	\>[0]\AgdaKeyword{data}\AgdaSpace{}%
 	\AgdaDatatype{⇑}\AgdaSpace{}%
 	\AgdaKeyword{where}\<%
