--- a/paper/code/strong_norm.tex
+++ b/paper/code/strong_norm.tex
@@ -504,7 +504,7 @@
 	\AgdaSymbol{→}\<%
 	\\
 	\>[1095I][@{}l@{\AgdaIndent{0}}]%
-	\>[10]\AgdaDatatype{SN*}\AgdaSpace{}%
+	\>[11]\AgdaDatatype{SN*}\AgdaSpace{}%
 	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
 	\AgdaBound{a}\AgdaSpace{}%
 	\AgdaSymbol{→}\AgdaSpace{}%
@@ -535,6 +535,8 @@
 	\AgdaBound{step}\AgdaSymbol{))}\<%
 	\\
 	\>[8][@{}l@{\AgdaIndent{0}}]%
+	\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}
+	\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}
 	\>[10]\AgdaSymbol{=}\AgdaSpace{}%
 	\AgdaFunction{lemma-⟨,⟩}\AgdaSpace{}%
 	\AgdaSymbol{(}\AgdaBound{SNa}\AgdaSpace{}%
@@ -1747,6 +1749,8 @@
 			\AgdaInductiveConstructor{asso}\AgdaSymbol{)}\<%
 			\\
 			\>[8][@{}l@{\AgdaIndent{0}}]%
+			\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}
+			\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}\AgdaIndent{0}
 			\>[10]\AgdaSymbol{=}\AgdaSpace{}%
 			\AgdaFunction{lemma-⟨,⟩}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaFunction{lemma-⟨,⟩}\AgdaSpace{}%
