--- a/paper/code/subs.tex
+++ b/paper/code/subs.tex
@@ -390,7 +390,7 @@
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
 	\AgdaBound{L}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaSymbol{=}%
+	\>[23]\AgdaSymbol{=}%
 	\>[26]\AgdaInductiveConstructor{π}\AgdaSpace{}%
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
