--- a/paper/references.bib
+++ b/paper/references.bib
@@ -10,6 +10,32 @@
 	editor = "Herman Geuvers",
 	publisher = "Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik"
 }
+@article{dist-lambda,
+	author       = {Beniamino Accattoli and Alejandro D{\'{\i}}az{-}Caro},
+	title        = {Functional Pearl: The Distributive {\(\lambda\)}-Calculus},
+	journal      = {CoRR},
+	volume       = {abs/2002.07944},
+	year         = {2020},
+	url          = {https://arxiv.org/abs/2002.07944},
+	eprinttype   = {arXiv},
+	eprint       = {2002.07944},
+	timestamp    = {Mon, 02 Mar 2020 16:46:06 +0100},
+	biburl       = {https://dblp.org/rec/journals/corr/abs-2002-07944.bib},
+	bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+@article{extensional-proofs,
+	author       = {Alejandro D{\'{\i}}az{-}Caro and Gilles Dowek},
+	title        = {Extensional proofs in a propositional logic modulo isomorphisms},
+	journal      = {CoRR},
+	volume       = {abs/2002.03762},
+	year         = {2020},
+	url          = {https://arxiv.org/abs/2002.03762},
+	eprinttype   = {arXiv},
+	eprint       = {2002.03762},
+	timestamp    = {Wed, 12 Feb 2020 16:38:55 +0100},
+	biburl       = {https://dblp.org/rec/journals/corr/abs-2002-03762.bib},
+	bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
 @thesis{sip,
 	author = {Sottile, Cristian},
 	title = {Agregando polimorfismo a una lógica que identifica proposiciones isomorfas},
@@ -17,6 +43,19 @@
 	institution = {Universidad Nacional de La Plata},
 	date = {2020-03-10},
 	url = {http://sedici.unlp.edu.ar/handle/10915/118544}
+}
+@article{sip-paper,
+	author       = {Cristian F. Sottile and Alejandro D{\'{\i}}az{-}Caro and Pablo E. Mart{\'{\i}}nez L{\'{o}}pez},
+	title        = {Polymorphic System {I}},
+	journal      = {CoRR},
+	volume       = {abs/2101.03215},
+	year         = {2021},
+	url          = {https://arxiv.org/abs/2101.03215},
+	eprinttype   = {arXiv},
+	eprint       = {2101.03215},
+	timestamp    = {Thu, 21 Jan 2021 14:42:30 +0100},
+	biburl       = {https://dblp.org/rec/journals/corr/abs-2101-03215.bib},
+	bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 @article{lambda-plus,
 	author       = {Alejandro D{\'{\i}}az{-}Caro and
