--- a/paper/code/example.tex
+++ b/paper/code/example.tex
@@ -1219,7 +1219,7 @@ _ = ^ π (` (S Z) · N-⋆)
 \AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
 \\
 %
-\>[5]\AgdaComment{--\ (λ\ (λ\ 1)\ ·\ 0)\ ·\ (λ\ 0\ ·\ 0)}\<%
+\>[5]\AgdaComment{--\ (λx.\ (λy.\ x)\ ·\ x)\ ·\ (λx.\ x\ ·\ x)}\<%
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]%
 \>[7]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
@@ -1248,7 +1248,7 @@ _ = ^ π (` (S Z) · N-⋆)
 \AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
 \\
 %
-\>[5]\AgdaComment{--\ (λ\ 0)\ ·\ (λ\ 0\ ·\ 0)}\<%
+\>[5]\AgdaComment{--\ (λx.\ x)\ ·\ (λx.\ x\ ·\ x)}\<%
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]%
 \>[7]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
@@ -1277,7 +1277,7 @@ _ = ^ π (` (S Z) · N-⋆)
 \AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
 \\
 %
-\>[5]\AgdaComment{--\ (λ\ 0)\ ·\ (λ\ (λ\ 1)\ ·\ 0)}\<%
+\>[5]\AgdaComment{--\ (λx.\ x)\ ·\ (λx.\ (λy.\ x)\ ·\ x)}\<%
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]%
 \>[7]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
@@ -1300,7 +1300,7 @@ _ = ^ π (` (S Z) · N-⋆)
 \AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
 \\
 %
-\>[5]\AgdaComment{--\ (λ\ 0)\ ·\ (λ\ 0)}\<%
+\>[5]\AgdaComment{--\ (λx.\ x)\ ·\ (λx.\ x)}\<%
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]%
 \>[7]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
@@ -1316,7 +1316,7 @@ _ = ^ π (` (S Z) · N-⋆)
 \AgdaInductiveConstructor{⋆}\<%
 \\
 %
-\>[5]\AgdaComment{--\ (λ\ 0)\ ·\ ⋆}\<%
+\>[5]\AgdaComment{--\ (λx.\ x)\ ·\ ⋆}\<%
 \\
 \>[5][@{}l@{\AgdaIndent{0}}]%
 \>[7]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
