--- a/paper/code/iso_term.tex
+++ b/paper/code/iso_term.tex
@@ -59,12 +59,12 @@
 	\>[0]\AgdaFunction{σ-uncurry}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{S}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
+	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+	\AgdaOperator{\AgdaInductiveConstructor{S}}\AgdaSpace{}%
+	\AgdaInductiveConstructor{Z}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+	\AgdaInductiveConstructor{Z}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
 	\AgdaSymbol{λ}\AgdaSpace{}%
