--- a/paper/code/strong_norm_base.tex
+++ b/paper/code/strong_norm_base.tex
@@ -1989,7 +1989,7 @@
 			\AgdaSymbol{=}\AgdaSpace{}%
 			\AgdaBound{σ}\AgdaSymbol{\}}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-			\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+			\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 			\AgdaBound{⊨σ}\AgdaSpace{}%
 			\AgdaSymbol{=}\<%
 			\\
@@ -2014,16 +2014,13 @@
 			\\
 			\>[6][@{}l@{\AgdaIndent{0}}]%
 			\>[8]\AgdaSymbol{(}\AgdaFunction{subst-split}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
+			\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
 			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaInductiveConstructor{∅}\AgdaSymbol{\}}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
-			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaBound{n}\AgdaSymbol{\})}\<%
+			\AgdaBound{t}\AgdaSymbol{\})}\<%
 			\\
 			%
 			\>[8]\AgdaSymbol{(}\AgdaFunction{adequacy}\AgdaSpace{}%
-			\AgdaBound{n}\AgdaSpace{}%
+			\AgdaBound{t}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
 			\AgdaBound{SNu}\AgdaSpace{}%
 			\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
@@ -2033,7 +2030,7 @@
 			\\
 			%
 			\>[4]\AgdaSymbol{(}\AgdaFunction{adequacy}\AgdaSpace{}%
-			\AgdaBound{n}\AgdaSpace{}%
+			\AgdaBound{t}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaFunction{⊨exts}\AgdaSpace{}%
 			\AgdaBound{⊨σ}\AgdaSymbol{))}\<%
 		\end{code}
