--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -20,6 +20,7 @@
 %opening
 \title{
 	\includegraphics[width=5cm]{logo.png} \\
+	\vspace{0.3cm}
 	\huge Facultad de Ciencias Exactas,\\ Ingeniería y Agrimensura \\
 	\vspace{0.5cm}
 	\Large Departamento de Ciencias de la Computación \\
@@ -27,10 +28,10 @@
 	\Huge \textbf{Formalización de Sistema I con tipo Top}
 }
 \author{
-	\textbf{Autor} \\ Agustin Settimo \and
+	\textbf{Autor} \\ Agustin Francisco Settimo \and
 	\textbf{Directora} \\ Cecilia Manzino \and
 	\textbf{Co-Director} \\ Cristian Sottile}
-\date{Octubre 2023}
+\date{Noviembre 2023}
 
 \begin{document}
 	
